redis/11-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-replica-headless
  namespace: redis
  labels:
    app: redis-cluster
    role: replica
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: redis-cluster
    role: replica
  ports:
  - name: redis-tls
    port: 6380
    targetPort: 6380
