redis/12-client-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster
  namespace: redis
spec:
  selector:
    app: redis-cluster
  ports:
  - name: redis-tls
    port: 6380
    targetPort: 6380
  type: ClusterIP
