redis/14-master-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-master-nodeport
  namespace: redis
  labels:
    app: redis-master
    role: master
spec:
  type: NodePort
  selector:
    app: redis-cluster
    role: master
  ports:
  - name: redis-tls
    port: 6380
    targetPort: 6380
    nodePort: 30383
