redis/40-external-access.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-node-0
  namespace: redis
  labels:
    app.kubernetes.io/name: redis-node-0
    app.kubernetes.io/part-of: redis-cluster
spec:
  type: NodePort
  selector:
    statefulset.kubernetes.io/pod-name: redis-cluster-0
  ports:
  - name: data
    port: 6379
    targetPort: 6379
    nodePort: 30079
    protocol: TCP
  - name: bus
    port: 16379
    targetPort: 16379
    nodePort: 32079
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: redis-node-1
  namespace: redis
  labels:
    app.kubernetes.io/name: redis-node-1
    app.kubernetes.io/part-of: redis-cluster
spec:
  type: NodePort
  selector:
    statefulset.kubernetes.io/pod-name: redis-cluster-1
  ports:
  - name: data
    port: 6379
    targetPort: 6379
    nodePort: 30080
    protocol: TCP
  - name: bus
    port: 16379
    targetPort: 16379
    nodePort: 32080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: redis-node-2
  namespace: redis
  labels:
    app.kubernetes.io/name: redis-node-2
    app.kubernetes.io/part-of: redis-cluster
spec:
  type: NodePort
  selector:
    statefulset.kubernetes.io/pod-name: redis-cluster-2
  ports:
  - name: data
    port: 6379
    targetPort: 6379
    nodePort: 30081
    protocol: TCP
  - name: bus
    port: 16379
    targetPort: 16379
    nodePort: 32081
    protocol: TCP
